update basic info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <!-- If you are reviewing my code, I made it myself, is not a template ;)
  //
- // Dear recruiter / Tech leader:
+ // Dear recruiter
  //
  // please reach me out at my email :) alonsog.alberto@gmail.com
  //
@@ -123,22 +123,21 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							</article>
 							<p class="">
 								<br/>
-								Seven years experienced product innovation professional passionate for levering products/services driving data and user-centred design.
+								Nine years experienced innovation professional passionate for levering products/services driving data and user-centred design.
 								<br/>
-								Holding a Design degree, worked as Product Manager, UX Researcher, Service Designer and Front-end developer, my background is not traditional.
+								Holding Innovation and Design degrees, worked as Product Manager, UX Researcher, Service Designer and Front-end developer, my background is not traditional.
 								<br>
 								Find here a proof of Digital Transformation (planning, testing, deploying and measuring) in fintech, services and cutting edge technology. (Y Combinator 2017).
 								<br>
 								<br>
-								In the past with: Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
+								In the past with: JP Morgan Chase, Repay, Wyndham Rentals, Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
 								<br/><br/>
 								Certified in <a href="https://www.credential.net/91399918-b66d-4cc8-8b51-da8528806d29" target="_blank">
 									<span class='has-text-weight-semibold' style='color:	#CD4D2D;'>Data analysis with Python & SQL</span>
 									</a>
 								<br/>
-								Digital Innovation Graduate Diploma @LSE (London School of Economics and Political Science) in progress.
+								Digital Innovation Graduate Diploma @LSE (London School of Economics and Political Science) 2020.
 								<br/>
-								Stay in touch! on the right corner buttons to <strong>get in contact</strong><br/>
 							</p>
 						</div>
 					</div>
@@ -292,7 +291,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2020 👨🏻‍💻</small>
+			<small>© Alberto Alonso Portfolio 2021 👨🏻‍💻</small>
 		</section>
 
 		<!-- Scripts  -->
