--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/jarettprofile.png">
+				<img class="avatar" src="assets/img/avatar.png">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
