--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
 		<nav class="nav container void-background">
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
+			
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<a href="https://twitter.com/JarettDewbury" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-medium"></i>
+						<i class="fa fa-twitter"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="https://github.com/Jdewbury" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://www.linkedin.com/in/jarett-dewbury/" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-twitter"></i>
+						<i class="fa fa-linkedin"></i>
 					</span>
 				</a>				
 			</div>
