--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 					<span class="icon">
 						<i class="fa fa-linkedin"></i>
 					</span>
+				</a>
+				<a href="mailto: jdewbury@uwaterloo.ca" class="nav-item">
+					<span class="icon">
+						<i class="fa fa-envelope-o"></i>
+					</span>
 				</a>				
 			</div>
 
