--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</a>
 				<a href="https://www.linkedin.com/in/jarett-dewbury/" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-linkedin"></i>
+						<i class="fa fa-envelope-o"></i>
 					</span>
 				</a>
 				<a href="mailto: jdewbury@uwaterloo.ca" class="nav-item">
