--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<a href="http://www.hassanali.me/about">Jarett Dewbury</a>
 		</section>
 		
 		<!-- Scripts  -->
