--- a/index.html
+++ b/index.html
@@ -12,39 +12,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
-		<!-- Navbar -->
-		<nav class="nav container void-background">
-			<!-- This "nav-menu" is hidden on mobile -->
-			<!-- Add the modifier "is-active" to display it on mobile -->
-			
-			<div class="nav-left">
-				<a href="https://twitter.com/JarettDewbury" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
-					</span>
-				</a>
-				<a href="https://github.com/Jdewbury" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-github"></i>
-					</span>
-				</a>
-				<a href="https://www.linkedin.com/in/jarett-dewbury/" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-linkedin"></i>
-					</span>
-				</a>
-				<a href="mailto: jdewbury@uwaterloo.ca" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-envelope-o"></i>
-					</span>
-				</a>				
-			</div>
+		 <!-- Navbar -->
+  		<nav class="nav container void-background has-shadow is-fluid">
+  			<div class="nav-left">
+  				<a href="https://www.facebook.com/raphkoh" target="_blank" class="nav-item">
+  					<span class="icon">
+  						<i class="fa fa-facebook"></i>
+  					</span>
+  				</a>
+  				<a href="https://github.com/theRoughCode" target="_blank" class="nav-item">
+  					<span class="icon">
+  						<i class="fa fa-github"></i>
+  					</span>
+  				</a>
+  				<a href="https://www.linkedin.com/in/raphael-koh/" target="_blank" class="nav-item">
+  					<span class="icon">
+  						<i class="fa fa-linkedin"></i>
+  					</span>
+  				</a>
+          <a href="mailto:rcykoh@uwaterloo.ca" class="nav-item">
+  					<span class="icon">
+  						<i class="fa fa-envelope"></i>
+  					</span>
+  				</a>
+  			</div>
 
-			<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
-			</div>
+  			<!-- This "nav-menu" is hidden on mobile -->
+  			<!-- Add the modifier "is-active" to display it on mobile -->
+  			<div class="nav-right nav-menu">
+  				<a class="nav-item is-tab" href="#body">About</a>
+          <a class="nav-item is-tab" href="#projects">Projects</a>
+          <a class="nav-item is-tab" href="#cv">CV</a>
+          <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/0B2E4UM8L0CqZQ2xaZnZaZklZVTA/view?usp=sharing&resourcekey=0-u28g12FRUPRL3Xp6V2HA4w">Resume</a>
+  				<a class="nav-item" target="_blank" href="./astrojump/index.html">AstroJump</a>
+  			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
 			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
