--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
   			<div class="nav-left">
   				<a href="https://www.facebook.com/raphkoh" target="_blank" class="nav-item">
   					<span class="icon">
-  						<i class="fa fa-facebook"></i>
+  						<i class="fa fa-envelope-o"></i>
   					</span>
   				</a>
-  				<a href="https://github.com/theRoughCode" target="_blank" class="nav-item">
+  				<a href="https://github.com/Jdewbury" target="_blank" class="nav-item">
   					<span class="icon">
   						<i class="fa fa-github"></i>
   					</span>
   				</a>
-  				<a href="https://www.linkedin.com/in/raphael-koh/" target="_blank" class="nav-item">
+  				<a href="https://www.linkedin.com/in/jarett-dewbury/" target="_blank" class="nav-item">
   					<span class="icon">
   						<i class="fa fa-linkedin"></i>
   					</span>
   				</a>
-          <a href="mailto:rcykoh@uwaterloo.ca" class="nav-item">
+          			<a href="mailto:jdewbury@uwaterloo.ca" class="nav-item">
   					<span class="icon">
-  						<i class="fa fa-envelope"></i>
+  						<i class="fa fa-envelope-o"></i>
   					</span>
   				</a>
   			</div>
@@ -44,7 +44,6 @@
           <a class="nav-item is-tab" href="#projects">Projects</a>
           <a class="nav-item is-tab" href="#cv">CV</a>
           <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/0B2E4UM8L0CqZQ2xaZnZaZklZVTA/view?usp=sharing&resourcekey=0-u28g12FRUPRL3Xp6V2HA4w">Resume</a>
-  				<a class="nav-item" target="_blank" href="./astrojump/index.html">AstroJump</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
