--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Jarett Dewbury">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -130,12 +130,7 @@
 				</div>
 			</div>
 		</section>	
-		
-		<!-- Footer -->
-		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Jarett Dewbury</a>
-		</section>
-		
+	
 		<!-- Scripts  -->
 		<script src="controller.js"></script>		
 	</body>	
