--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   			</span>
   		</nav>
     </div>
-    <section class="section" id="about">
+    <section class=""section section-1"" id="about">
       <div class="container">
         <div class="columns is-centered is-vcentered">
           <div class="column">
