--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+
+::selection {
+  color: red;
+  background: yellow;
+}
+
+</style>
 	<title>Jarett Dewbury</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -42,7 +50,6 @@
   			<div class="nav-right nav-menu">
   				<a class="nav-item is-tab" href="#body">About</a>
           <a class="nav-item is-tab" href="#projects">Projects</a>
-          <a class="nav-item is-tab" href="#cv">CV</a>
           <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/0B2E4UM8L0CqZQ2xaZnZaZklZVTA/view?usp=sharing&resourcekey=0-u28g12FRUPRL3Xp6V2HA4w">Resume</a>
   			</div>
 
