--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="column">
             <img class="avatar" src="assets/img/avatar.png">
             <div class="about-title has-text-centered">
-              <h1 class="title is-2">Raphael Koh</h1>
+              <h1 class="title is-2">Jarett Dewbury</h1>
             </div>
             <div class="has-text-centered">
               <span class="about-subtitle">
