--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <style>
 
 ::selection {
-  color: red;
-  background: yellow;
+  color: #8262FF;
+  background: #101010;
 }
 
 </style>
@@ -69,11 +69,6 @@
             <img class="avatar" src="assets/img/avatar.png">
             <div class="about-title has-text-centered">
               <h1 class="title is-2">Jarett Dewbury</h1>
-            </div>
-            <div class="has-text-centered">
-              <span class="about-subtitle">
-                ⟨ Software Engineer | Quantum Physicist ⟩</span>
-              </span>
             </div>
           </div>
           <div class="column">
