--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 		a Biomedical Engineering undergraduate student at the University of Waterloo.<br /><br />
               </p>
               <p id="interests">
-                I am currently looking to explore a variety of topics ranging from brain-machine interfaces, deep learning, artificial intelligence, 
-		neurotechnology, software engineering, and research exploring the intersection of these fields!
-
+                I am currently looking to explore a variety of topics ranging from brain-machine interfaces, deep learning, 
+		   artificial intelligence, 
+		neurotechnology, software engineering, and research exploring the intersection of these fields! <br /><br />
 		Outside of academia, my passions focus around ice hockey, bike rides, and all things food.
               </p>
             </div>
