--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="columns is-centered is-vcentered">
           <div class="column">
-            <img class="avatar" src="assets/img/avatar.png">
+            <img class="avatar" src="assets/img/jarettprofile.png">
             <div class="about-title has-text-centered">
               <h1 class="title is-2">Jarett Dewbury</h1>
             </div>
