--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		 <!-- Navbar -->
   		<nav class="nav container void-background has-shadow is-fluid">
   			<div class="nav-left">
-  				<a href="https://www.facebook.com/raphkoh" target="_blank" class="nav-item">
+  				<a href="https://twitter.com/JarettDewbury" target="_blank" class="nav-item">
   					<span class="icon">
-  						<i class="fa fa-envelope-o"></i>
+  						<i class="fab fa-twitter"></i>
   					</span>
   				</a>
   				<a href="https://github.com/Jdewbury" target="_blank" class="nav-item">
@@ -49,6 +49,7 @@
   			<!-- Add the modifier "is-active" to display it on mobile -->
   			<div class="nav-right nav-menu">
   				<a class="nav-item is-tab" href="#body">About</a>
+				<a class="navbar-brand abs" href="#">Jarett Dewbury</a>
           <a class="nav-item is-tab" href="#projects">Projects</a>
           <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/0B2E4UM8L0CqZQ2xaZnZaZklZVTA/view?usp=sharing&resourcekey=0-u28g12FRUPRL3Xp6V2HA4w">Resume</a>
   			</div>
