--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="column">
             <div class="about-desc">
-              <p class="has-text-centered">
+              <!--p class="has-text-centered"-->
                 I'm an aspiring Engineer and researcher looking to share my passions and better the lives of those around me. I am currently 
 		a Biomedical Engineering undergraduate student at the University of Waterloo.<br /><br />
               </p>
