--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="about-desc">
               <!--p class="has-text-centered"-->
                 I'm an aspiring Engineer and researcher looking to share my passions and better the lives of those around me. I am 
-		a current Biomedical Engineering undergraduate student at the University of Waterloo.<br /><br />
+		a current <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering" target="_blank">Biomedical Engineering</a> undergraduate student at the University of Waterloo.<br /><br />
               </p>
               <p id="interests">
                 I am currently looking to explore a variety of topics ranging from brain-machine interfaces, deep learning, 
