--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   			<div class="nav-left">
   				<a href="https://twitter.com/JarettDewbury" target="_blank" class="nav-item">
   					<span class="icon">
-  						<i class="fab fa-twitter"></i>
+  						<i class="fa fa-twitter"></i>
   					</span>
   				</a>
   				<a href="https://github.com/Jdewbury" target="_blank" class="nav-item">
@@ -50,9 +50,9 @@
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
 			<h1>Jarett Dewbury</h1>
   			<div class="nav-right nav-menu">
-  				<a class="nav-item is-tab" href="#body">About</a>
-          <a class="nav-item is-tab" href="#projects">Projects</a>
-          <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/0B2E4UM8L0CqZQ2xaZnZaZklZVTA/view?usp=sharing&resourcekey=0-u28g12FRUPRL3Xp6V2HA4w">Resume</a>
+  				<!--a class="nav-item is-tab" href="#body">About</a-->
+          <!--a class="nav-item is-tab" href="#projects">Projects</a-->
+          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
