--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   			<!-- This "nav-menu" is hidden on mobile -->
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
-			<h1>Jarett Dewbury</h1>
+			<h1>JARETT DEWBURY</h1>
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
