--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
-          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
+          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RESUME</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
