--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   			<!-- This "nav-menu" is hidden on mobile -->
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
-			<h1>JARETT DEWBURY</h1>
+			<h1>JD</h1>
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
-          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RESUME</a>
+          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
