--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   			<!-- This "nav-menu" is hidden on mobile -->
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
-			<h1>JD</h1>
+			<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
@@ -73,6 +73,8 @@
           <div class="column">
             <div class="about-desc">
               <!--p class="has-text-centered"-->
+		Hi, I'm <a>Jarett Dewbury</a>.
+		    
                 I'm an aspiring Engineer and researcher looking to share my passions and better the lives of those around me. I am 
 		a current <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering" target="_blank">Biomedical Engineering</a> undergraduate student at the University of Waterloo.<br /><br />
               </p>
