--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
           <div class="column">
             <div class="about-desc">
               <!--p class="has-text-centered"-->
-		Hi, I'm <a>Jarett Dewbury</a>.
-		    
+		Hi, I'm <b>Jarett Dewbury</b>.<br /><br>
                 I'm an aspiring Engineer and researcher looking to share my passions and better the lives of those around me. I am 
 		a current <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering" target="_blank">Biomedical Engineering</a> undergraduate student at the University of Waterloo.<br /><br />
               </p>
