--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   			<!-- This "nav-menu" is hidden on mobile -->
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
-			<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>
+			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
+			<img src="favicon.png" alt="icon" class="center">
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
