--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 I am currently looking to explore a variety of topics ranging from brain-machine interfaces, deep learning, 
 		   artificial intelligence, 
 		neurotechnology, software engineering, and research exploring the intersection of these fields! <br /><br />
-		Outside of academia, my passions focus around ice hockey, bike rides, and all things food.
+		Outside of academia, my passions focus around <a href="https://www.eliteprospects.com/player/582668/jarrett-dewbury" target="_blank">ice hockey</a>, bike rides, and all things food.
               </p>
             </div>
           </div>
