--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
 			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
-			<img class="logo" src="assets/img/websitelogo.png">
+			<img class="logo" src="assets/img/weblogo.png">
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
