--- a/index.html
+++ b/index.html
@@ -118,19 +118,20 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								</figure>
 								<div class="media-content">
 									<h1 class="title">Alberto Alonso</h1>
-									<h2 class="subtitle">User Experience Designer & Researcher ready for challenges</h2>
+									<h2 class="subtitle">User Experience Researcher & Product Manager ready for challenges</h2>
 								</div>
 							</article>
 							<p class="">
 								<br/>
 								Nine years experienced innovation professional passionate for levering products/services driving data and user-centred design.
 								<br/>
-								Holding Innovation and Design degrees, worked as Product Manager, UX Researcher, Service Designer and Front-end developer, my background is not traditional.
-								<br>
-								Find here a proof of Digital Transformation (planning, testing, deploying and measuring) in fintech, services and cutting edge technology. (Y Combinator 2017).
-								<br>
-								<br>
-								In the past with: JP Morgan Chase, Repay, Wyndham Rentals, Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
+								Trained and graduated in digital innovation, design thinking and data analytics, I have worked as Product Manager, UX Researcher, Service Designer and a bit of development too.
+								<br/>
+								Find here Digital Transformation cases (planning, testing, deploying and measuring) in fintech such as <b> JP Morgan Chase </b> in the United States, besides other industries such as services and retail.					
+								<br/>
+								Over the last years, I have worked on several projects, among them in: Automation, Machine Learning,  Internet of Things, Payments. With companies such as JP Morgan Chase, Wyndham Rentals, Rappi, Samsung and Intel in different countries.
+								Besides, I received mentorship at <b>Y Combinator</b>.
+
 								<br/><br/>
 								Certified in <a href="https://www.credential.net/91399918-b66d-4cc8-8b51-da8528806d29" target="_blank">
 									<span class='has-text-weight-semibold' style='color:	#CD4D2D;'>Data analysis with Python & SQL</span>
