--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </style>
 	<title>Jarett Dewbury</title>
 	<!-- css files -->
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
@@ -51,7 +52,7 @@
 			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
 			<img class="logo" src="assets/img/weblogo.png">
   			<div class="nav-right nav-menu">
-  				<!--a class="nav-item is-tab" href="#body">About</a-->
+			<a class="nav-item" target="_blank" href="about.html">About</a>
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
           <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
   			</div>
@@ -64,30 +65,12 @@
   				<span></span>
   			</span>
   		</nav>
-    </div>
-    <section class=""section section-1"" id="about">
-      <div class="container">
-        <div class="columns is-centered is-vcentered">
-          <div class="column">
-            <img class="avatar" src="assets/img/jarettprofilephoto.png">
-          </div>
-          <div class="column">
-            <div class="about-desc">
-              <!--p class="has-text-centered"-->
-		Hi, I'm <b>Jarett Dewbury</b>.<br /><br>
-                I'm an aspiring Engineer and researcher looking to share my passions and better the lives of those around me. I am 
-		a current <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering" target="_blank">Biomedical Engineering</a> undergraduate student at the University of Waterloo.<br /><br />
-              </p>
-              <p id="interests">
-                I am currently looking to explore a variety of topics ranging from brain-machine interfaces, deep learning, 
-		   artificial intelligence, 
-		neurotechnology, software engineering, and research exploring the intersection of these fields! <br /><br />
-		Outside of academia, my passions focus around <a href="https://www.eliteprospects.com/player/582668/jarrett-dewbury" target="_blank">ice hockey</a>, bike rides, and all things food.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <section class=""section section-1"" id="Home">
+		<div class="title">
+			<h1>Jarett Dewbury</h1>
+				<br>
+				<div class="typed-out2">Welcome to my Personal Website!</div>
+			</div>
     </section>	
 	</body>	
 </html>
