--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   			<div class="nav-right nav-menu">
 			<a class="nav-item" target="_blank" href="about.html">About</a>
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
-          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
+          <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
