--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
-		  <a class="nav-item" target="_blank" href="index.html">Home</a>
-          <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
+		  <a class="nav-item" href=index.html>Home</a>
+          <a class="nav-item" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
