--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
 			<img class="logo" src="assets/img/weblogo.png">
   			<div class="nav-right nav-menu">
-			<a class="nav-item" target="_blank" href="about.html">About</a>
+			<a class="nav-item" href=about.html>About</a>
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
-          <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
+          <a class="nav-item" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
