--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
 			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
-			<img class="logo" src="assets/img/weblogo.png">
   			<div class="nav-right nav-menu">
+			<a href = index.html>
+				<img src = "assets/img/weblogo.png" />
+			</a>
 			<a class="nav-item" href=about.html>About</a>
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
           <a class="nav-item" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
