--- a/about.html
+++ b/about.html
@@ -51,7 +51,9 @@
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
 			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
-			<img class="logo" src="assets/img/weblogo.png">
+			<a href = index.html>
+				<img src = "assets/img/weblogo.png" />
+			</a>
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
