--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="columns is-centered is-vcentered">
           <div class="column">
-            <img class="avatar" src="assets/img/Avatar.png">
+            <img class="avatar" src="assets/img/myavatar.png">
           </div>
           <div class="column">
             <div class="about-desc">
