--- a/work_endava.html
+++ b/work_endava.html
@@ -28,69 +28,74 @@
 		    </button>
 		  </div>
 
-		  <div class="navbar-menu" id="navMenu">
-				<div class="navbar-start">
-					<a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
-						Home
-					</a>
-					<div class="navbar-item has-dropdown is-hoverable">
-						<a class="navbar-link" href="#about">
-							Work
-						</a>
-						<div class="navbar-dropdown is-boxed">
-							<a class="navbar-item" href="work_repay_2.html">
-								Repay consumer-facing
-							</a>
-							<a class="navbar-item" href="work_repay_1.html">
-								Repay admin-facing
-							</a>
-							<a class="navbar-item" href="work_hogaru.html">
-								Hogaru.com
-							</a>
-							<hr class="navbar-divider">
-							<a class="navbar-item" href="work_nequi.html">
-								Nequi Neobank
-							</a>
-							<hr class="navbar-divider">
-							<a class="navbar-item" href="work_rappi.html" target:"_blank">
-								Rappi
-							</a>
-							<hr class="navbar-divider">
-							<a class="navbar-item" href="work_endava.html" target:"_blank">
-								Endava Ramp-Up Journal
-							</a>
-							<hr class="navbar-divider">
-						</div>
-					</div>
-				</div>
+		 <div class="navbar-menu" id="navMenu">
+			    <div class="navbar-start">
+			      <a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
+			        Home
+			      </a>
+			      <div class="navbar-item has-dropdown is-hoverable">
+			        <a class="navbar-link" href="#about">
+			          Work
+			        </a>
+			        <div class="navbar-dropdown is-boxed">
+								<a class="navbar-item" href="work_jpmc.html">
+			            JP Morgan services documentation
+			          </a>
+					  <hr class="navbar-divider">
+								<a class="navbar-item" href="work_repay_2.html">
+			            Repay consumer-facing
+			          </a>
+								<a class="navbar-item" href="work_repay_1.html">
+			            Repay admin-facing
+			          </a>
+					  <hr class="navbar-divider">
+			          <a class="navbar-item" href="work_hogaru.html">
+			            Hogaru.com
+			          </a>
+								<hr class="navbar-divider">
+			          <a class="navbar-item" href="work_nequi.html">
+			            Nequi Neobank
+			          </a>
+								<hr class="navbar-divider">
+			          <a class="navbar-item" href="work_rappi.html" target:"_blank">
+			            Rappi
+			          </a>
+								<hr class="navbar-divider">
+								<a class="navbar-item" href="work_endava.html" target:"_blank">
+			            Endava Ramp-Up Journal
+			          </a>
+								<hr class="navbar-divider">
+			        </div>
+			      </div>
+			    </div>
 
-		    <div class="navbar-end">
-		      <div class="navbar-item">
-		        <div class="field is-grouped">
-		          <p class="control">
-		            <a class=" button" data-social-network="Linkedin" data-social-target="https://www.linkedin.com/in/albertoalonsog/" target="_blank" href="https://www.linkedin.com/in/albertoalonsog/">
-		              <span class="icon">
-		                <i class="fa fa-linkedin"></i>
-		              </span>
-		              <span>
-		                Linkedin
-		              </span>
-		            </a>
-		          </p>
-		          <p class="control">
-		            <a class="button" href="http://github.com/a-alonso" target="_blank">
-		              <span class="icon">
-		                <i class="fa fa-github"></i>
-		              </span>
-		              <span>Github</span>
-		            </a>
-		          </p>
-		        </div>
-		      </div>
-		    </div>
-		  </div>
-		</nav>
-
+			    <div class="navbar-end">
+			      <div class="navbar-item">
+			        <div class="field is-grouped">
+			          <p class="control">
+			            <a class=" button" data-social-network="Linkedin" data-social-target="https://www.linkedin.com/in/albertoalonsog/" target="_blank" href="https://www.linkedin.com/in/albertoalonsog/">
+			              <span class="icon">
+			                <i class="fa fa-linkedin"></i>
+			              </span>
+			              <span>
+			                Linkedin
+			              </span>
+			            </a>
+			          </p>
+			          <p class="control">
+			            <a class="button" href="http://github.com/a-alonso" target="_blank">
+			              <span class="icon">
+			                <i class="fa fa-github"></i>
+			              </span>
+			              <span>Github</span>
+			            </a>
+			          </p>
+			        </div>
+			      </div>
+			    </div>
+			  </div>
+			</nav>
+			
 		<!-- About Me -->
 		<section class="hero is-medium is-dark is-bold">
 		  <div class="hero-body">
