--- a/work_jpmc.html
+++ b/work_jpmc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Work: repay.com</title>
+	<title>Work: JP Morgan Chase</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Repay">
+	<meta name="author" content="JP Morgan Chase">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#E25D33">
 </head>
@@ -95,16 +95,16 @@
 			    </div>
 			  </div>
 			</nav>
-
-		<!-- About Me -->
-		<section class="hero is-medium is-primary is-bold">
+	
+	<!-- About Me -->
+		<section class="hero is-medium is-link is-bold">
 		  <div class="hero-body">
 		    <div class="container">
 		      <h1 class="title">
-		        Repay.com
+		        JP Morgan Chase
 		      </h1>
 		      <h2 class="subtitle">
-		        Loan Repayments Gateway
+		        Merchant Services Documentation Portal
 		      </h2>
 		    </div>
 		  </div>
